fixing warnings prep for 3.1.1